Botond Hegedus-Nagy not picked up by scraper

--- a/data/HTML/TWL2024U15.htm
+++ b/data/HTML/TWL2024U15.htm
@@ -476,7 +476,7 @@ TWLU1524 Overall Statistics (as of Dec 06, 2024)<br>
 <td align=center><font face=verdana size=1 color="#000000">2-3&nbsp;</td>
 </tr>
 <tr bgcolor="#ffffff">
-<td align=left><font face=verdana size=1 color="#000000">Botond Hegedus-Nagy, GOLD&nbsp;</td>
+<td align=left><font face=verdana size=1 color="#000000">Botond H. Nagy, GOLD&nbsp;</td>
 <td align=right><font face=verdana size=1 color="#000000"> .400&nbsp;</td>
 <td align=center><font face=verdana size=1 color="#000000">3-3&nbsp;</td>
 <td align=right><font face=verdana size=1 color="#000000">5&nbsp;</td>
@@ -4841,7 +4841,7 @@ PB - Laszlo Hellw ORAN 1, Vilem Vancur NAVY 1.
 <td align=right><font face=verdana size=1 color="#000000">0&nbsp;</td>
 </tr>
 <tr bgcolor="#ffffff">
-<td align=left><font face=verdana size=1 color="#000000">Botond Hegedus-Nagy, GOLD&nbsp;</td>
+<td align=left><font face=verdana size=1 color="#000000">Botond H. Nagy, GOLD&nbsp;</td>
 <td align=right><font face=verdana size=1 color="#000000">3&nbsp;</td>
 <td align=right><font face=verdana size=1 color="#000000">2&nbsp;</td>
 <td align=right><font face=verdana size=1 color="#000000">1&nbsp;</td>
